feat: enhance Swiss tournament tests with improved assertions for pairing logic and team assignments